<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorBackground"
        android:padding="16dp"
        tools:context=".ui.register.RegisterActivity">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/logo"
            android:contentDescription="@string/cantalk_logo"
            app:layout_constraintBottom_toTopOf="@id/let_email"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/let_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="7pt"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/logo"
            style="@style/EditTextDefault2">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:hint="@string/name"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/let_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="7pt"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/let_name"
            style="@style/EditTextDefault2">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:hint="@string/email"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/let_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="7pt"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/let_email"
            style="@style/EditTextDefault2">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:hint="@string/password"/>

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/disabled_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/are_you_disabled"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_marginTop="7pt"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/let_password"
            app:layout_constraintBottom_toTopOf="@id/button_disabled" />

        <LinearLayout
            android:id="@+id/button_disabled"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="3pt"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/disabled_text"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_yes_disabled"
                style="@style/ButtonBorderGray"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_marginRight="8dp"
                android:text="@string/yes" />

            <Button
                android:id="@+id/btn_no_disabled"
                style="@style/ButtonBorderGray"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_marginLeft="8dp"
                android:text="@string/no" />

        </LinearLayout>

        <Button
            android:id="@+id/btn_sign_up"
            style="@style/ButtonDefault"
            android:text="@string/sign_up"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>