<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp"
        android:gravity="center"
        android:background="@color/colorBackground">

        <EditText
            android:id="@+id/text_message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:inputType="text"
            android:textStyle="bold"
            android:enabled="false"
            android:textColor="@android:color/black"
            android:textAlignment="center"
            android:background="@drawable/bg_button_border"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/button_dot"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:background="@drawable/bg_button_default"
                android:stateListAnimator="@null"
                android:layout_marginEnd="10dp"
                android:text="@string/dot"
                android:textColor="@android:color/white"
                android:textStyle="bold"
                android:textSize="60sp"
                android:gravity="center"
                android:layout_weight="1"/>

            <TextView
                android:id="@+id/button_dash"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:background="@drawable/bg_button_default"
                android:stateListAnimator="@null"
                android:layout_marginStart="10dp"
                android:text="@string/dash"
                android:textColor="@android:color/white"
                android:textStyle="bold"
                android:textSize="60sp"
                android:gravity="center"
                android:layout_weight="1"/>

        </LinearLayout>

        <TextView
            android:id="@+id/button_slice"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@drawable/bg_button_default"
            android:stateListAnimator="@null"
            android:text="@string/slice"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            android:textSize="40sp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/button_space"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/bg_button_default"
                android:gravity="center"
                android:text="@string/space"
                android:textColor="@android:color/white"
                android:textSize="30sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/button_clear"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:background="@drawable/bg_button_default"
                android:stateListAnimator="@null"
                android:layout_marginStart="10dp"
                android:text="@string/clear"
                android:textColor="@android:color/white"
                android:textStyle="bold"
                android:textSize="30sp"
                android:gravity="center"
                android:layout_weight="1"/>

        </LinearLayout>

        <TextView
            android:id="@+id/button_read"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@drawable/bg_button_default"
            android:stateListAnimator="@null"
            android:text="@string/read"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            android:textSize="30sp"/>

        <TextView
            android:id="@+id/button_send"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@drawable/bg_button_default"
            android:stateListAnimator="@null"
            android:text="@string/send"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            android:textSize="30sp"/>

    </LinearLayout>


</layout>